# jinp-czat

./: CMakeLists.txt  README.md
include/: Client.hpp  CryptoManager.hpp  Message.hpp  MessageHistory.hpp  Server.hpp  User.hpp
src/: Client.cpp  CryptoManager.cpp  MessageHistory.cpp  Server.cpp  client_main.cpp  server_main.cpp
tests/: server_test.cpp
